# golta

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ja.md  dist-workspace.toml  release.md
.github/: dependabot.yml
.github/workflows/: audit.yml  clippy.yml  deploy.yml  install.ps1  install.sh  release.yml  test.yml
example/: go.mod  main.go
scripts/: install.ps1  install.sh
src/: main.rs
src/crates/cli/: Cargo.toml
src/crates/cli/src/: main.rs
src/crates/cli/src/cli/: completions.rs  default.rs  exec.rs  install.rs  list.rs  list_remote.rs  mod.rs  pin.rs  run.rs  setup.rs  uninstall.rs  unpin.rs  which.rs
src/crates/cli/src/shared/: active_version.rs  local_versions.rs  mod.rs  os_info.rs  pinned_version.rs  versions.rs
src/crates/cli/tests/smoke/: common.rs  exec_test.rs  mod.rs  pin_test.rs  uninstall_test.rs  which_test.rs
src/crates/shim/: Cargo.toml  main.rs
tests/smoke/: smoke.rs
