[package]
name = "golta-cli"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "golta"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
clap_complete = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
zip = "0.6"
home = "0.5"
