[package]
name = "golta-cli"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "golta"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
clap_complete = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
zip = "0.6"
home = "0.5"
semver = "1.0"
tempfile = "3.23.0"
indicatif = { version = "0.17", features = ["tokio"] }
futures-util = "0.3"
flate2 = "1.0"
tar = "0.4"
regex = "1.0"

[dev-dependencies]
serde_json = "1.0"

[[test]]
name = "smoke"
path = "tests/smoke/mod.rs"
